Add Oauth and Mongoose
