# routes/dashboard.js
@@ -1,0 +1,13 @@
+const express = require('express');
+const router = express.Router();
+
+// @desc    Dashboard
+// @route   GET /dashboard
+router.get('/', (req, res) => {
+    res.render('Dashboard', {
+        name: req.user.firstName,
+    });
+
+});
+
+module.exports = router;
